codegen/ui_tests/export_fn_raw_return.stderr
error[E0308]: mismatched types
  --> $DIR/export_fn_raw_return.rs:10:8
   |
9  | #[export_fn(return_raw)]
   | ------------------------ expected `Result<rhai::Dynamic, std::boxed::Box<rhai::EvalAltResult>>` because of return type
10 | pub fn test_fn(input: Point) -> bool {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected enum `Result`, found `bool`
   |
   = note: expected enum `Result<rhai::Dynamic, std::boxed::Box<rhai::EvalAltResult>>`
              found type `bool`
